[tool.poetry]
name = "plantilla-tareas-autoevaluadas"
version = "0.1.0"
description = ""
authors = ["kevinah95 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
